Added the ability for scrolling to ask for more pages of data from the server. Also moved JSON parsing into the Worker class.

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -6,7 +6,7 @@
 <resources>
 	<string-array
 		name="return_format">
-		<item>XML</item>
-		<item>JSON</item>
+		<item>Country</item>
+		<item>Region</item>
 	</string-array>
 </resources>
