--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -19,7 +19,12 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/home_b_country_list" />
-	<Button
+		<Button
+		android:id="@+id/b_attacktype_list"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:text="@string/home_b_attacktype_list" />
+		<Button
 		android:id="@+id/b_attack_list"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
