--- a/res/layout/filtered_list.xml
+++ b/res/layout/filtered_list.xml
@@ -41,7 +41,8 @@
 		<ListView
 			android:id="@android:id/list"
 			android:layout_width="fill_parent"
-			android:layout_height="fill_parent" />
+			android:layout_height="fill_parent"
+			android:choiceMode="multipleChoice" />
 		<TextView
 			android:id="@android:id/empty"
 			android:layout_width="fill_parent"
