Added 3 more filters. Still requires way too much work. Need to standardize and reduce the number of references. Provider still a mess.

--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -1,32 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 2011 Foxykeep (http://datadroid.foxykeep.com) Licensed under the Beerware 
+<!--
+     2011 Foxykeep (http://datadroid.foxykeep.com) Licensed under the Beerware 
 	License : As long as you retain this notice you can do whatever you want 
 	with this stuff. If we meet some day, and you think this stuff is worth it, 
-	you can buy me a beer in return -->
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:orientation="vertical"
-	android:paddingTop="5dp">
-	<Button
-		android:id="@+id/b_region_list"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:text="@string/home_b_region_list" />
-		<Button
-		android:id="@+id/b_country_list"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:text="@string/home_b_country_list" />
-		<Button
-		android:id="@+id/b_attacktype_list"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:text="@string/home_b_attacktype_list" />
-		<Button
-		android:id="@+id/b_attack_list"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:text="@string/home_b_attack_list" />	
+	you can buy me a beer in return
+-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:paddingTop="5dp" >
+
+    <Button
+        android:id="@+id/b_region_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/home_b_region_list" />
+
+    <Button
+        android:id="@+id/b_country_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/home_b_country_list" />
+
+    <Button
+        android:id="@+id/b_attacktype_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/home_b_attacktype_list" />
+
+    <Button
+        android:id="@+id/b_targettype_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/home_b_targettype_list" />
+
+    <Button
+        android:id="@+id/b_weapontype_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/home_b_weapontype_list" />
+
+    <Button
+        android:id="@+id/b_dbsource_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/home_b_dbsource_list" />
+
+    <Button
+        android:id="@+id/b_attack_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/home_b_attack_list" />
+
 </LinearLayout>
