--- a/res/layout/attack_detail.xml
+++ b/res/layout/attack_detail.xml
@@ -14,18 +14,19 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
 
-        <LinearLayout
+        <ScrollView
             android:id="@+id/tab1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="60dp" >
+            android:fillViewport="true"
+            android:paddingTop="60dp"
+            android:scrollbars="vertical" >
 
             <TextView
                 android:id="@+id/txt1"
                 android:layout_width="fill_parent"
-                android:layout_height="100dp" />
-        </LinearLayout>
+                android:layout_height="wrap_content" />
+        </ScrollView>
 
         <LinearLayout
             android:id="@+id/tab2"
@@ -37,7 +38,7 @@
             <TextView
                 android:id="@+id/txt2"
                 android:layout_width="fill_parent"
-                android:layout_height="100dp" />
+                android:layout_height="fill_parent" />
         </LinearLayout>
 
         <LinearLayout
@@ -50,7 +51,7 @@
             <TextView
                 android:id="@+id/txt3"
                 android:layout_width="fill_parent"
-                android:layout_height="100dp" />
+                android:layout_height="fill_parent" />
         </LinearLayout>
 
         <LinearLayout
@@ -63,7 +64,7 @@
             <TextView
                 android:id="@+id/txt4"
                 android:layout_width="fill_parent"
-                android:layout_height="100dp" />
+                android:layout_height="fill_parent" />
         </LinearLayout>
     </FrameLayout>
 
