--- a/res/layout/filtered_list.xml
+++ b/res/layout/filtered_list.xml
@@ -1,54 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 2011 Foxykeep (http://datadroid.foxykeep.com) Licensed under the Beerware 
+<!--
+     2011 Foxykeep (http://datadroid.foxykeep.com) Licensed under the Beerware 
 	License : As long as you retain this notice you can do whatever you want 
 	with this stuff. If we meet some day, and you think this stuff is worth it, 
-	you can buy me a beer in return -->
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:orientation="vertical"
-	android:padding="5dp">
-	<LinearLayout
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:orientation="horizontal">
-		<Spinner
-			android:id="@+id/sp_filter"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"
-			android:prompt="@string/filtered_list_sp_filter_prompt"
-			android:entries="@array/return_format" />
-		<Button
-			android:id="@+id/b_load"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/filtered_list_b_load" />
-		<Button
-			android:id="@+id/b_clear_db"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/filtered_list_b_clear_db" />
-	</LinearLayout>
-	<View
-		android:layout_width="fill_parent"
-		android:layout_height="2dp"
-		android:background="?android:attr/listDivider" />
-	<FrameLayout
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent">
-		<ListView
-			android:id="@android:id/list"
-			android:layout_width="fill_parent"
-			android:layout_height="fill_parent"
-			android:choiceMode="multipleChoice" />
-		<TextView
-			android:id="@android:id/empty"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:paddingTop="30dp"
-			android:gravity="center"
-			android:text="@string/filtered_list_tv_empty" />
-	</FrameLayout>
+	you can buy me a beer in return
+-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:padding="5dp" >
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <Spinner
+            android:id="@+id/sp_filter"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:entries="@array/return_format"
+            android:prompt="@string/filtered_list_sp_filter_prompt" />
+
+        <Button
+            android:id="@+id/b_clear_selections"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/filtered_list_b_clear_selections" />
+
+        <Button
+            android:id="@+id/b_clear_db"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/filtered_list_b_clear_db" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:background="?android:attr/listDivider" />
+
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
+
+        <ListView
+            android:id="@android:id/list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:choiceMode="multipleChoice" />
+
+        <TextView
+            android:id="@android:id/empty"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingTop="30dp"
+            android:text="@string/filtered_list_tv_empty" />
+    </FrameLayout>
+
 </LinearLayout>
